# ds881-docker-rust-n

./: .dockerignore  Cargo.toml  README.md  arturfalavinha.Dockerfile  build_arturfalavinha.sh  build_eduardo.sh  edukaique.Dockerfile  gabrielbrasil.Dockerfile  luiz.Dockerfile  start.sh
.github/workflows/: validate-arturfalavinha.yml
src/: main.rs
